Sourced and added google maps API in script tags on interests page

--- a/01-adding_the_map_element/interests.html
+++ b/01-adding_the_map_element/interests.html
@@ -160,6 +160,8 @@
             </div>
         </div>
     </footer>
+    <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEhj-ddrmSgiCVU7-hK2p4Rd5PvyHnG80&callback=initMap"></script>
 </body>
 
 </html>
