--- a/01-adding_the_map_element/interests.html
+++ b/01-adding_the_map_element/interests.html
@@ -160,8 +160,11 @@
             </div>
         </div>
     </footer>
-    <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js"></script>
-    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEhj-ddrmSgiCVU7-hK2p4Rd5PvyHnG80&callback=initMap"></script>
+    <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEhj-ddrmSgiCVU7-hK2p4Rd5PvyHnG80&callback=initMap" type="text/javascript"></script>    
+    <script src="assets/js/maps.js"></script>
 </body>
 
 </html>
+
+AIzaSyCEhj-ddrmSgiCVU7-hK2p4Rd5PvyHnG80
